# hom-ham

./: .gitignore  README.md  homham.py  int-homham.py
concrete-python/: README.md  homham.py  int-homham.py  lookup-int-homham.py  masked-homham.py
mpc-experiments/: README.md  hamming.mpc  masked-hamming-int.mpc  masked-hamming.mpc
mpc-experiments/Player-Data/: Input-P0-0  Input-P1-0
mpc-experiments/Programs/Source/: hamming-int.mpc
rust-hom-ham/: Cargo.toml  README.md
rust-hom-ham/src/: main.rs  popcount.rs
si-ntru/: Makefile  README.md
si-ntru/include/: ltv.h  ltv_base.h
si-ntru/src/: functions.cpp  ltv.cpp  ltv_base.cpp
si-ntru/test/: ltvtest  ltvtest.cpp
sorting-hat/: README.md
sorting-hat/SortingHat/src/rust_pdte/: Cargo.toml
sorting-hat/SortingHat/src/rust_pdte/benches/: iris.rs
