[package]
name = "rust-hom-ham"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.4.1", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }
#tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
rand = "0.8"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "popcount"
path = "src/popcount.rs"
