[package]
name = "rust-hom-ham"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.4.1", features = ["boolean", "shortint", "integer", "x86_64-unix"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.4.1", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "popcount"
path = "src/popcount.rs"
